[gd_scene load_steps=7 format=3 uid="uid://wn6a7fwifvry"]

[ext_resource type="FontFile" uid="uid://cfcwm8k5hrjno" path="res://assets/font/BebasNeue-Regular.ttf" id="1_jc0wf"]
[ext_resource type="Texture2D" uid="uid://bfihp00rslko2" path="res://assets/textures/UI/main_menu/menu_button.png" id="1_q7y3f"]
[ext_resource type="Script" uid="uid://dn8dfejdx8fh2" path="res://scripts/menus_ui/menu_tab_button.gd" id="1_qwxu6"]
[ext_resource type="Script" uid="uid://bcfk7xye7h7fe" path="res://scripts/menus_ui/MovingTextButton.gd" id="2_q7y3f"]
[ext_resource type="PackedScene" uid="uid://tnebb72tf6h1" path="res://scenes/menus_ui/text_button.tscn" id="5_2dbeg"]

[sub_resource type="LabelSettings" id="LabelSettings_0ju8t"]
font = ExtResource("1_jc0wf")
font_size = 45

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 390.0
offset_bottom = 72.0
scale = Vector2(0.5, 0.5)
script = ExtResource("1_qwxu6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -36.1
offset_right = 388.9
offset_bottom = 72.0
texture = ExtResource("1_q7y3f")
expand_mode = 1
stretch_mode = 4

[node name="TextButton" parent="TextureRect" instance=ExtResource("5_2dbeg")]
layout_mode = 0
offset_right = 426.0
offset_bottom = 72.0
text = "SINGLE PLAYER"
label_settings = SubResource("LabelSettings_0ju8t")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_q7y3f")
hover_color = Color(1, 1, 1, 1)
pressed_color = Color(0.768627, 0.666667, 0, 1)

[node name="Polygon2D" parent="TextureRect/TextButton/PolygonMouseDetector" index="0"]
polygon = PackedVector2Array(0, 0, 392.1, 0, 402.1, 2, 410.1, 6, 418.1, 14, 422.1, 22, 424.1, 34, 424.1, 44, 420.1, 54, 414.1, 62, 406.1, 68, 394.1, 72, 0.0999985, 72)

[connection signal="button_pressed" from="TextureRect/TextButton" to="." method="_on_button_pressed"]

[editable path="TextureRect/TextButton"]
[editable path="TextureRect/TextButton/PolygonMouseDetector"]
